--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -43,7 +43,7 @@ var buttonsStr = ''
 <nav class="nav" data-direction={direction} data-varient={varient}>
     {
         items.map((item, i) => {
-            <button url={item.url} class="nav-btn">{item.name}</button>
+            <a href={item.url} class="nav-btn" target={item.target || '_self'}>{item.name}</a>
         })
     }
 </nav>
@@ -53,20 +53,4 @@ var buttonsStr = ''
         if (b.clientWidth > largestWidth) largestWidth = b.clientWidth
     })
     document.querySelector('.nav-btn').parentNode.style.setProperty('--min-width', `${largestWidth/16}rem`)
-
-    document.querySelectorAll('.nav-btn').forEach(function(b, i) {
-        b.href = b.getAttribute('url')
-        b.removeAttribute('url')
-
-        var oTag = b.tagName.toLowerCase()
-        var nTag = 'a'
-        
-        var html = b.outerHTML
-        html = html
-        .replace(`<${oTag}`, `<${nTag}`)
-        .replace(`</${oTag}>`, `</${nTag}>`)
-        b.outerHTML = html
-        
-        b = document.querySelectorAll('.nav-btn')[i]
-    })
 </script>
