--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -37,13 +37,12 @@ $padding: 1rem;
         display: grid;
     }
 
-    &__info, &__content {
-        width: 100%;
+    &__info, &__title, &__content {
+        max-width: 100%;
     }
 
     &__title, &__content {
         margin-block: 0;
-        max-width: 100%;
         height: fit-content;
         text-align: center;
     }
