--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -42,7 +42,7 @@ $padding: 1rem;
     }
 
     &__title, &__content {
-        margin-block: 0;
+        margin-inline: auto;
         height: fit-content;
         text-align: center;
     }
