--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -1,41 +1,42 @@
 .nav {
-    &:not([data-varient="sidebar"]) {
-      flex: 1;
-      height: 100%;
-    }  
-    
-    display: flex;
-    flex-wrap: wrap;
+  &:not([data-varient="sidebar"]) {
+    flex: 1;
+    height: 100%;
+  }  
   
-    &[data-direction="row"] {
-      flex-direction: row;
-    }
-    &[data-direction="column"] {
-      flex-direction: column;
-    }
-  
-    justify-content: center;
-    gap: 15px;
+  display: flex;
+  flex-wrap: wrap;
+
+  &[data-direction="row"] {
+    flex-direction: row;
+  }
+  &[data-direction="column"] {
+    flex-direction: column;
+  }
+
+  justify-content: center;
+  gap: 15px;
 }
   
 .nav-btn {
-    padding: 10px 20px;
-  
-    min-width: var(--min-width, fit-content);
-  
-    background-color: var(--bdr-clr, var(--color));
-    color: var(--btn-clr, var(--bg));
-  
-    border: none;
-    border-radius: 100vw;
-  
-    font-size: 1.25rem;
-  
-    cursor: pointer;
-  
-    &:hover {
-      background-color: var(--nav-btn-hover);
-    }
+  padding: 10px 20px;
+
+  min-width: var(--min-width, fit-content);
+
+  background-color: var(--bdr-clr, var(--color));
+  color: var(--btn-clr, var(--bg));
+
+  border: none;
+  border-radius: 100vw;
+
+  font-size: 1.25rem;
+  text-align: center;
+
+  cursor: pointer;
+
+  &:hover {
+    background-color: var(--nav-btn-hover);
+  }
 }
   
 // .nav .current-page {
