--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -8,7 +8,12 @@
 
 .page-title:has(+ .post), .post :is(.info, .postContent) {
     border-left: var(--bor);
-    border-right: var(--bor);
+
+    @media (width > 1012px) {
+        & {
+            border-right: var(--bor);
+        }
+    }
 }
 
 .info {
