--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -24,6 +24,9 @@ await fetch('https://blogfeed.adarshrkumar.dev/getAllPosts')
 <Layout title="Blog">
   <SiteGridContent classItems="posts">
     {
+      posts
+    }
+    {
       posts.map(function(post, i) {
         if (!post.image) {
           post.image = {}
