--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -19,6 +19,6 @@ var navItems = [
 ---
 <header id="header">
     <a class="logo" href="/" style={`background-image: url('${logo}');`}></a>
-    <Nav siteDomain={siteDomain} items={navItems} />
+    <Nav siteDomain={siteDomain} items={navItems} varient="header" />
     <ThemeSwitcher defaultTheme="system"/>
 </header>
