--- a/src/pages/_blog.astro
+++ b/src/pages/_blog.astro
@@ -15,10 +15,10 @@ var location = {
   host: site, 
 }
 
-await fetch('https://blogfeed.adarshrkumar.dev/getAllPosts')
-  .then(response => response.json())
-  .then(json => {posts = json})
-  .catch(err => console.error(err))
+// await fetch('https://blogfeed.adarshrkumar.dev/getAllPosts')
+//   .then(response => response.json())
+//   .then(json => {posts = json})
+//   .catch(err => console.error(err))
 
 ---
 <Layout title="Blog">
