--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,7 +15,8 @@ var location = {
   host: site, 
 }
 
-// await fetch('https://blogfeed.adarshrkumar.dev/getAllPosts')
+await fetch('https://blogfeed.adarshrkumar.dev/getAllPosts')
+  .then(response => console.log(respose))
 //   .then(response => response.json())
 //   .then(json => {posts = json})
 //   .catch(err => console.error(err))
