--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,9 +16,8 @@ var location = {
 }
 
 await fetch('https://blogfeed.adarshrkumar.dev/getAllPosts')
-  .then(response => console.log(response))
-//   .then(response => response.json())
-//   .then(json => {posts = json})
+  .then(response => response.json())
+  .then(json => console.log(json); posts = json)
 //   .catch(err => console.error(err))
 
 ---
