--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -17,8 +17,8 @@ var location = {
 
 await fetch('https://blogfeed.adarshrkumar.dev/getAllPosts')
   .then(response => response.json())
-  .then(json => {console.log(json); posts = json})
-//   .catch(err => console.error(err))
+  .then(json => posts = json)
+  .catch(err => console.error(err))
 
 ---
 <Layout title="Blog">
