--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -35,6 +35,7 @@ $padding: 1rem;
     &__info {
         overflow-x: hidden;
         display: grid;
+        gap: $padding;
     }
 
     &__info, &__title, &__content {
@@ -42,6 +43,7 @@ $padding: 1rem;
     }
 
     &__title, &__content {
+        margin-block: 0;
         margin-inline: auto;
         height: fit-content;
         text-align: center;
