--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -9,6 +9,7 @@ import Layout from '../layouts/Layout.astro'
     <section class="info">
         <a href="/authors" class="author">See All Authors</a> | <span class="date">Today</span>
     </section>
+    <div class="scroll-percentage"></div>
     <article class="postContent">
 
     </article>
