--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -21,7 +21,7 @@ var items = [
       url: 'https://smcas.net', 
       target: '_blank', 
     }, 
-    description: 'My dad is on the SMCAS board, and they had been talking about creating a new accessible website for a while, so he asked me if I would be willing to help. I said that I wouls and spent my winder blrak working on copying content to a WordPress site.', 
+    description: 'My dad is on the SMCAS board, and they had been talking about creating a new accessible website for a while, so he asked me if I would be willing to help. I said that I would and spent my winter break working on copying content to a WordPress site.', 
     // class: 'featured', 
   }, 
   // {
