--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -61,7 +61,7 @@ if (className.endsWith(' ')) className = className.substring(-1)
           <slot />
         </div>
       </main>
-      <Sidebar />
+      <!-- <Sidebar /> -->
     </div>
     <Script name="main" />
     <!-- <script src="/eruda.js" is:inline></script> -->
