--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -3,6 +3,6 @@ import '../styles/components/hero.scss'
 ---
 <section class="hero">
     <h1>Adarsh Kumar</h1>
-    <h2>Web Developer, Coder, Photopgapher, Musician</h2>
+    <h2>Web Developer, Coder, Photographer, Musician</h2>
     <h3>Many Other Things!</h3>
 </section>
