--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -14,7 +14,7 @@ var navItems = [
     { name: 'About' }, 
     // { name: 'Contact' }, 
     { name: 'Portfolio' }, 
-    { name: 'Projects' }, 
+    // { name: 'Projects' }, 
     { name: 'Blog' }, 
     // { name: 'Videos' }, 
 ]
