--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -11,7 +11,7 @@ var navItems = [
     { name: 'About' }, 
     { name: 'Contact' }, 
     { name: 'Portfolio' }, 
-    { name: 'Projects' }, 
+    // { name: 'Projects' }, 
     { name: 'Blog' }, 
     // { name: 'Videos' }, 
 ]
