--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,7 +66,7 @@ if (className.endsWith(' ')) className = className.substring(-1)
     <Script name="main" />
     <!-- <script src="/eruda.js" is:inline></script> -->
     <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
       (function(){
         var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -76,7 +76,7 @@ if (className.endsWith(' ')) className = className.substring(-1)
         s1.setAttribute('crossorigin','*');
         s0.parentNode.insertBefore(s1,s0);
       })();
-    </script>
+    </script> -->
     <!--End of Tawk.to Script-->
   </body>
 </html>
