--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -13,7 +13,7 @@ var navItems = [
     { name: 'Portfolio' }, 
     // { name: 'Projects' }, 
     { name: 'Blog' }, 
-    // { name: 'Videos' }, 
+    { name: 'Videos' }, 
 ]
 
 ---
