--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -5,7 +5,7 @@ header {
   padding: 2rem 4rem;
 
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 
   flex-wrap: wrap;
