--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -32,7 +32,7 @@ else age = currentDate.year - dob.year
     <p>Hi, I'm Adarsh Kumar, {age} years old, and a High School Student.</p>
     <p>I am a web developer, programmer, tech enthusiast, photographer, and history enthusiast.</p>
     <p>I created this site to share my journey, showcase my projects, and other things alike.</p>
-    <p>Explore my work, learn from my mistakes, and Join me as I explore technology and photography.</p>
+    <p>Explore my work, learn from my mistakes, and join me as I explore technology and photography.</p>
     <p>I am good with software, so if you need tech help, let me know! I also enjoy history and geography.</p>
   </div>
 </Layout>
