--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -117,9 +117,8 @@ projects.forEach(function(category, i) {
         <h3>{category.name}</h3>
         {
           category.items.map((item, i2) => {
-            var src = `https://image.thum.io/get/maxAge/12/width/${512}/${item.link.url}`
+            var src = `https://webshot.adarshrkumar.dev/take?url=${encodeURIComponent(item.link.url)}&viewport_width=${512}&viewport_height=${512}`
             return (<a href={item.link.url} target={item.link.target} class={`item ${item.class}`}>
-              <img src={src} alt class="item__img" />
               <div class="item__info">
                 <h3 class="item__title">{item.name}</h3>
                 <p class="item__content">{item.description}</p>
