--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -117,7 +117,8 @@ projects.forEach(function(category, i) {
         <h3>{category.name}</h3>
         {
           category.items.map((item, i2) => {
-            var src = `https://webshot.adarshrkumar.dev/take?url=${encodeURIComponent(item.link.url)}&viewport_width=${512}&viewport_height=${512}`
+            var imageSize = 512
+            var src = `https://webshot.adarshrkumar.dev/take?url=${encodeURIComponent(item.link.url)}&viewport_width=${imageSize}&viewport_height=${imageSize}`
             return (<a href={item.link.url} target={item.link.target} class={`item ${item.class}`}>
               <div class="item__info">
                 <h3 class="item__title">{item.name}</h3>
