--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -61,7 +61,7 @@ items.forEach(function(item, i) {
           var imageSize = 512
           var src = `https://webshot.adarshrkumar.dev/take?url=${encodeURIComponent(item.link.url)}&viewport_width=${imageSize}&viewport_height=${imageSize}`
           return (<a href={item.link.url} target={item.link.target} class={`item ${item.class}`}>
-            <img src={src} alt class="item__img" />
+            <img src={src} alt class="item__img" style={`--placeholder: url('${src}&image_quality=${50}')`} />
             <div class="item__info">
               <h3 class="item__title">{item.name}</h3>
               <p class="item__content">
