--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -120,6 +120,7 @@ projects.forEach(function(category, i) {
             var imageSize = 512
             var src = `https://webshot.adarshrkumar.dev/take?url=${encodeURIComponent(item.link.url)}&viewport_width=${imageSize}&viewport_height=${imageSize}`
             return (<a href={item.link.url} target={item.link.target} class={`item ${item.class}`}>
+              <img src={src} alt class="item__img" style={`--placeholder: url('${src}&image_quality=${50}')`} />
               <div class="item__info">
                 <h3 class="item__title">{item.name}</h3>
                 <p class="item__content">{item.description}</p>
