--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,6 +16,7 @@ var location = {
 }
 
 var posts = Astro.glob('../../blog/posts/*.md')
+console.log(posts)
 ---
 <Layout title="Blog">
   <SiteGridContent classItems="posts">
