--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -31,7 +31,7 @@ var posts = await Astro.glob('../../blog/posts/*.md')
         if (slug.includes(' ')) slug = slug.split(' ').join('-')
 
 
-        var postUrl = `${location.protocol}//${location.host}/${slug}?hideHeader=true`
+        var postUrl = `${location.protocol}//${location.host}/post/${slug}?hideHeader=true`
         var imageSize = 512
         image.src = `https://webshot.adarshrkumar.dev/take?url=${encodeURIComponent(postUrl)}&viewport_width=${imageSize}&viewport_height=${imageSize}`
         image.alt = `Screenshot of the "${post.frontmatter.title}" post.`
@@ -60,7 +60,7 @@ var posts = await Astro.glob('../../blog/posts/*.md')
           previewContent.endsWith('^')
         ) previewContent = previewContent.slice(0, -1)
         
-        return (<a href={slug} class="item">
+        return (<a href={`/post/${slug}`} class="item">
           <img class="item__img" src={image.src} alt={image.alt} style={`--placeholder: url('${image.src}&image_quality=${50}')`} />
           {
             !!(post.frontmatter.title || textContent) ? <div class="item__info">
