--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -19,33 +19,29 @@ import Layout from '../layouts/Layout.astro'
         const urlSearchParams = new URLSearchParams(window.location.search);
         const postId = urlSearchParams.get('id');
 
-        var post = {}
-        await fetch(`https://blogfeed.adarshrkumar.dev/getPost?path=${postId}`)
-            .then(response => response.json())
-            .then(json => {
-                post = json
-            })
-        
+        var post = await Astro.glob(`../../blog/posts/${postId}.md`)
 
-        if (post.code === 200) {
+        if (post) {
+            post = post[0]
+            
             var postEle = document.querySelector('.post')
             var infoEle = postEle.querySelector('.info')
-            var author = post.author
+            var author = postFile.frontmatter.author
             
             var link = document.createElement('link')
             link.rel = 'stylesheet'
             link.href = `https://blogfeed.adarshrkumar.dev/getStyles?id=${postId}`
             postEle.appendChild(link)
 
-            document.querySelector('.page-title').textContent = post.title
-            document.title = `${post.title} | ${document.title}`
+            document.querySelector('.page-title').textContent = post.frontmatter.title
+            document.title = `${post.frontmatter.title} | ${document.title}`
             
             infoEle.querySelector('.author').href = `/authorPage?username=${author.username}`
             infoEle.querySelector('.author').textContent = author.displayName
 
-            infoEle.querySelector('.date').textContent = post.date
+            infoEle.querySelector('.date').textContent = post.frontmatter.date
 
-            postEle.querySelector('.post-content').innerHTML = post.content
+            postEle.querySelector('.post-content').innerHTML = post.compiledContent()
             postEle.style.display = ''
         }
         else location.href = '/blog'
