--- a/src/pages/blogPost.astro
+++ b/src/pages/blogPost.astro
@@ -24,6 +24,7 @@ import Layout from '../layouts/Layout.astro'
 
         if (post) {
             post = post[0]
+            console.log(post)
 
             var postEle = document.querySelector('.post')
             var infoEle = postEle.querySelector('.info')
