--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -20,18 +20,7 @@ var posts = await Astro.glob('../../blog/posts/*.md')
     {
       posts.map(function(post, i) {
         var image = {}
-
-        var slug = post.frontmatter.title.toLowerCase()
-
-        var sRepls = ['`', '~', '!', '@', '#', '$', '^', '&', '*', '(', ')', '-', '_', '=', '+', '[', ']', '{', '}', '\\', '|', ';', ':', "'", '"', ',', '.', '<', '>', '/', '?']
-        sRepls.forEach(r => {
-          if (slug.includes(r)) slug = slug.split(r).join('')
-        })
-
-        if (slug.includes(' ')) slug = slug.split(' ').join('-')
-
-
-        var postUrl = `${location.protocol}//${location.host}/blogPost?id=${slug}&hideHeader=true`
+        var postUrl = `${location.protocol}//${location.host}/blogPost?id=${post.file}&hideHeader=true`
         var imageSize = 512
         image.src = `https://webshot.adarshrkumar.dev/take?url=${encodeURIComponent(postUrl)}&viewport_width=${imageSize}&viewport_height=${imageSize}`
         image.alt = `Screenshot of the "${post.frontmatter.title}" post.`
@@ -60,7 +49,7 @@ var posts = await Astro.glob('../../blog/posts/*.md')
           previewContent.endsWith('^')
         ) previewContent = previewContent.slice(0, -1)
         
-        return (<a href={`/blogPost?id=${slug}`} class="item">
+        return (<a href={`/blogPost?id=${post.file}`} class="item">
           <img class="item__img" src={image.src} alt={image.alt} style={`--placeholder: url('${image.src}&image_quality=${50}')`} />
           {
             !!(post.frontmatter.title || textContent) ? <div class="item__info">
