--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -6,9 +6,9 @@ import Layout from '../layouts/Layout.astro'
 
 export function getStaticPaths() {
     return [
-        {params: {id: 'hello-world'}}, 
-        {params: {id: 'nodebooks'}}, 
-        {params: {id: 'some-old-templates-that-i-found'}}, 
+        // {params: {id: 'hello-world'}}, 
+        // {params: {id: 'nodebooks'}}, 
+        // {params: {id: 'some-old-templates-that-i-found'}}, 
     ];
 }
 
